name:                dhall-html
version:             0.1
-- synopsis:
-- description:
homepage:            https://github.com/andrewthad/dhall-html#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2017 Andrew Martin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Dhall.Html
    Dhall.Html.Import
    Dhall.Html.Parse
  build-depends:
      base >= 4.7 && < 5
    , dhall
    , bytestring
    , text
    , text-format
    , trifecta
    , vector
    , xmlhtml
    , containers
    , http-client
    , http-client-tls
    , parsers
    , system-filepath
    , transformers
    , case-insensitive
    , lens
    , system-fileio
  default-language:
    Haskell2010

executable dhall-html
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base
    , dhall-html
    , dhall
    , text
    , xmlhtml
    , bytestring
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/dhall-html
